--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "isomorphic-fetch": "^2.2.1",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^7.0.0",
