--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  }
+  },
+  "homepage" : "http://pengfluf.github.io/react-weather-ru"
 }
